examples/test/testpolicy5287.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5287
  namespace: namespace90
spec:
  podSelector:
    matchLabels:
      key41: value14
      key37: value16
      key1: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value14
          key48: value22
      podSelector:
        matchLabels:
          key4: value26
          key16: value35
          key42: value46
